Don't try to upload Coveralls results

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -70,4 +70,4 @@ jobs:
         run: mix dialyzer --no-check --halt-exit-status
 
       - name: Run tests
-        run: mix coveralls.github
+        run: mix coveralls
